--- a/style.css
+++ b/style.css
@@ -150,7 +150,7 @@ h2
     main img
     {
         height: 400px;
-        
+        object-fit: cover;
         border-radius: 15px 15px 0px 0px;
         -moz-border-radius: 15px 15px 0px 0px;
         -webkit-border-radius: 15px 15px 0px 0px;
